# knx-frontend

./: .eslintrc.json  .gitignore  .gitmodules  .pre-commit-config.yaml  .releaserc.json  .yarnrc.yml  FIX_DOCUMENTATION.md  LICENSE  MANIFEST.in  Makefile  README.md  angular.json  build-panel.js  comments.json  config.js  elements-webpack.config.js  eslint.config.mjs  gulpfile.js  hacs.json  karma.conf.js  package-lock.json  package.json  pyproject.toml  requirements_dev.txt  rollup.config.js  rspack.config.cjs  setup.cfg  setup.py  tsconfig.json  vitest.config.ts  webpack.config.cjs  webpack.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  release-drafter.yml
.github/workflows/: ReleaseActions.yml  build.yml  ci.yml  hacs.yaml  hassfest.yaml  pre-commit.yml  pythonpublish.yml  release-drafter.yml  release.yaml  test.yml
.husky/: pre-commit
backupsrc/: knx_ui.ts
backupsrc/services/: navigation.service.ts  websocket.service.ts
backupsrc/types/: navigation.ts  table.ts  websocket.ts
backupsrc/util/: load-ha.ts
backupsrc/views/: bus_monitor.ts  overview.ts
build-scripts/: bundle.cjs  bundle.js  env.cjs  env.js  list-plugins-and-polyfills.js  lit-disable-dev-mode-loader.cjs  minify-template-literals-loader.cjs  paths.cjs  paths.js  rollup.cjs  rollup.js  rspack.cjs  webpack.cjs  webpack.js
build-scripts/babel-plugins/: NOTE.md  custom-polyfill-plugin.js
build-scripts/gulp/: clean.cjs  clean.js  compress.cjs  compress.js  copy.js  entry-html.cjs  entry-html.js  gen-icons-json.js  index.mjs  knx.cjs  knx.js  locale-data.js  rollup.cjs  rollup.js  rspack.js  translations-knx.js  translations.js  webpack.cjs  webpack.js
build-scripts/rollup-plugins/: worker-plugin.cjs
custom_components/knx_panel/: .gitignore  __init__.py  const.py  knx_ui.js  manifest.json  websocket.py
frontend/: .gitignore  .releaserc.json  package-lock.json  package.json  rollup.config.js  tsconfig.json  tslint.json
frontend/src/: knx_ui.ts
knx_frontend/: __init__.py  constants.py
script/: bootstrap  build  develop  merge_requirements.js  setup-agents  upgrade-frontend
script/gulp/: common.js  rollup.js
src/: __init__.py  constants.py  entrypoint.ts  index.html  knx-router.ts  knx.ts  knx_ui.ts  main.ts  py.typed  test.ts  version.ts
src/app/: app.module.ts  types.ts
src/components/: flex-content-expansion-panel.ts  knx-configure-entity-card.ts  knx-configure-entity-options.ts  knx-configure-entity.ts  knx-configure-expose.ts  knx-configure-switch.ts  knx-device-picker.ts  knx-dialog-header.ts  knx-dpt-dialog-selector.ts  knx-dpt-option-selector.ts  knx-dpt-selector.ts  knx-expose-template-preview.ts  knx-form.ts  (+12 more)
test/: setup.ts  vitest.config.ts
xknx-custom-panel/: __init__.py  knx_ui.js
xknx_custom_panel/: __init__.py
(+115 files in other folders)
