[build-system]
requires = ["setuptools~=62.3", "wheel~=0.37.1"]
build-backend = "setuptools.build_meta"

[project]
name         = "knx_frontend"
license      = {text = "MIT License"}
description  = "KNX panel for Home Assistant"
keywords     = ["Home Assistant", "KNX"]
readme       = "README.md"
authors      = [
    {name = "Marvin Wichmann", email = "me@marvin-wichmann.de"}
]
requires-python = ">=3.9.0"
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/XKNX/knx-frontend"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["knx_frontend"]

[tool.mypy]
python_version = 3.9
show_error_codes = true
strict = true
