[metadata]
name         = xknx-panel
version      = 1.0.0
author       = Marvin Wichmann
author_email = me@marvin-wichmann.de
license      = MIT
platforms    = any
description  = The KNX Panel for the Home Assistant Frontend
long_description = file: README.md
long_description_content_type = text/markdown
url          = https://github.com/home-assistant/frontend

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >= 3.9.0

[options.packages.find]
include =
    knx_frontend/*

[mypy]
python_version = 3.9
show_error_codes = True
strict = True
